# walkie-talkie

./: .dockerignore  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .sops.yaml  .trivyignore  .typos.toml  Cargo.toml  Justfile  README.md  biome.jsonc  cog.toml  compose.yaml  encrypted.env  example.env  flake.nix  justfile  prek.toml  prod.compose.yaml  redocly.yaml  wtapi.Dockerfile  wtws.Dockerfile
.github/: renovate.json
.github/workflows/: backend.yml  checks.yml  cleanup-ghcr.yml  frontend.yml  github-pages.yml  infra-apply.yml  infra-destroy.yml
.husky/: commit-msg  post-commit  pre-commit  pre-push
infra/: .gitignore  .terraform.lock.hcl  README.md  encrypted.default.json  encrypted.tfvars.json  main.tf  outputs.tf  providers.tf  variables.tf
infra/cloudflare-pages/: README.md  main.tf  variables.tf
infra/cloudflare-tunnel/: README.md  main.tf  outputs.tf  variables.tf
infra/tests/: basic.tftest.hcl
openapi/: axum.oasgen.yaml  openapi.yaml  ts.oasgen.yaml
openapi/components/schemas/: channel.yaml  user.yaml
openapi/paths/: channels.yaml  echo.yaml  users-{user_id}.yaml  users.yaml
scripts/: build-docs.sh  cleanup-ghcr.sh  commit-msg.sh  gen-rust-axum.sh  gen-typescript.sh  git-status.sh
wt-rest-api/: Cargo.toml
wt-rest-api/src/: config.rs  db.rs  error.rs  lib.rs  server.rs
wt-rest-api/src/apis/: channels.rs  echo.rs  mod.rs  users.rs
wt-rest-stubs/: Cargo.toml  README.md
wt-rest-stubs/.openapi-generator/: FILES
wt-rest-stubs/src/: lib.rs  models.rs  types.rs
wt-rest-stubs/src/apis/: channels.rs  echo.rs  mod.rs  users.rs
wt-rest-stubs/src/server/: mod.rs
wt-webapp/: .env.development  .env.production  biome.jsonc  index.html  package.json  wrangler.toml
wt-webapp-sdk/: README.md  package.json  runtime.ts
wt-webapp-sdk/.openapi-generator/: FILES
wt-webapp-sdk/apis/: ChannelsApi.ts  EchoApi.ts  UsersApi.ts
wt-webapp-sdk/docs/: Channel.md  ChannelsApi.md  EchoApi.md  User.md  UsersApi.md
wt-webapp-sdk/models/: Channel.ts  User.ts
wt-webapp-sdk/src/apis/: ChannelsApi.ts  EchoApi.ts  UsersApi.ts  index.ts
wt-webapp-sdk/src/models/: Channel.ts  User.ts  index.ts
wt-webapp/src/: chat.ts  form.ts  main.ts  sdk-test.ts  vite-env.d.ts  ws.ts
wt-websocket/: Cargo.toml
wt-websocket/src/: main.rs
