# --------- #
# workspace
# --------- #

[workspace]
resolver = "3"
members = ["wt-websocket", "wt-rest-stubs", "wt-rest-api"]

# ----------------- #
# workspace.package
# ----------------- #

[workspace.package]
version = "0.1.0-alpha"
readme = "README.md"
authors = ["Yusong Lai <yusonglai64@gmail.com>"]
repository = "https://github.com/whisperpine/walkie-talkie"
license = "MIT OR Apache-2.0"
edition = "2024"

# ---------------------- #
# workspace.dependencies
# ---------------------- #

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie", "query"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.88"
thiserror = "2.0.11"
anyhow = "1.0.95"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
base64 = "0.22"
bytes = "1"
http = "1"

# --------------- #
# profile.release
# --------------- #

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"

# ------------- #
# linting rules
# ------------- #

# Rustc lints (https://doc.rust-lang.org/rustc/lints/index.html).
[workspace.lints.rust]
# lint groups (https://doc.rust-lang.org/rustc/lints/groups.html)
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
# lint listing (https://doc.rust-lang.org/rustc/lints/listing/index.html)
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "forbid"

# Rustdoc lints (https://doc.rust-lang.org/rustdoc/lints.html).
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

# Clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
[workspace.lints.clippy]
# Clippy lint groups (https://doc.rust-lang.org/stable/clippy/lints.html).
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Indivisual clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
needless_pass_by_value = "allow"
rest_pat_in_fully_bound_structs = "warn"
lossy_float_literal = "warn"
empty_enum_variants_with_brackets = "warn"
verbose_file_reads = "warn"
suboptimal_flops = "warn"
str_to_string = "warn"
integer_division = "warn"
allow_attributes = "warn"
imprecise_flops = "warn"
exit = "warn"
