[package]
name = "wt-rest-stubs"
version = "0.1.0-alpha"
authors = ["yusonglai64@gmail.com"]
description = "API for whisperpine/walkie-talkie repository on GitHub"
license = "Apache 2.0"
edition = "2021"
documentation = "README.md"

[features]
default = ["server"]
server = []
conversion = [
    "frunk",
    "frunk_derives",
    "frunk_core",
    "frunk-enum-core",
    "frunk-enum-derive",
]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "query"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
frunk = { version = "0.4", optional = true }
frunk-enum-core = { version = "0.3", optional = true }
frunk-enum-derive = { version = "0.3", optional = true }
frunk_core = { version = "0.4", optional = true }
frunk_derives = { version = "0.4", optional = true }
http = "1"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_html_form = "0.2"
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", default-features = false, features = [
    "signal",
    "rt-multi-thread",
] }
tracing = { version = "0.1", features = ["attributes"] }
uuid = { version = "1", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = "0.3"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"

[lints.rustdoc]
bare_urls = "allow"

[lints.clippy]
uninlined_format_args = "allow"

