[package]
name = "wt-websocket"
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[lints]
workspace = true

[dependencies]
serde.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
serde_json.workspace = true
# tracing_subscriber.workspace = true
